What's new?
===========

Prototype 5+dev2
----------------

- Server crash fix (currently ony in linux version)
- Bugfixes


Prototype 5-testing
-------------------

Released: Dec. 16, 2011

- Support for Infantry arenas.
- Fixed zone mechanics and demo recording.
- Improved UI (both functionally and visually).
- Changed default key-bindings: "t" for chat, "shift t" for team chat.
- New disc: Explosive Disc
- New way to configure loadout: Hotkeys load a pre-configured loadout
  and only the first slot can be exchanged on-the-fly.
- New menus: "Edit Loadouts", "Switch Team" and "Arena Admin".
- B.O.U.N.C.E. has been moved from the red/blue into the orange/green
  weapon category. To compensate for bypassing the shield, its damage
  has been reduced.
- B.O.U.N.C.E. can now annihilate enemy projectiles.
- The mines now work and look more like conventional explosives and
  have been put into the orange/green weapon category.
- Repel Discs cut anchoring in half rather than zeroing it.
- Revert influence of the shooter's momentum on the battle rifle's 
  projectiles' trajectory back to the way it was in prototype 3.
- Improved disc target tracking a little
- "Smart" crosshair.
- Connecting players automatically join the team with less players.
- Although functionally unchanged, the "damage buffer" is now
  presented more like a classic energy shield.   
- The more unusual mechanics have been turned into to CAT 
  equipment items to make them more noticeable.
- Tweaked battle rifle projectile bounce sound and visuals.
- Mission Editor: Ignore locked or hidden objects when ray-casting.
- Bugfixes & lots of other minor improvements.


Prototype 4-testing
-------------------

Released: Jun. 26, 2011

- Breaks backwards compatibility to older versions!
- Newbie helper
- Handicap feature allows more experienced players to 
  give a fair chance to less experienced players.
- CATs now skid when touching the ground at high speeds
  and not etherboarding.