@@ -219,8 +219,8 @@ function RedBlasterImage::onMount(%this, %obj, %slot)
 
    // Set up recoil
    %obj.setImageRecoilEnabled(%slot, true);
-   %obj.setImageCurrentRecoil(%slot, 50);
-   %obj.setImageMaxRecoil(%slot, 50);
+   %obj.setImageCurrentRecoil(%slot, 150);
+   %obj.setImageMaxRecoil(%slot, 150);
    %obj.setImageRecoilAdd(%slot, 0);
    %obj.setImageRecoilDelta(%slot, -0);
 }
