@@ -9,7 +9,7 @@
 //-----------------------------------------------------------------------------
 
 $GameNameString = "rotc-ethernet";
-$GameVersionString = "p.5+dev2";
+$GameVersionString = "p.5+dev3";
 
 //------------------------------------------------------------------------------
 
