@@ -1,11 +1,12 @@
 What's new?
 ===========
 
-Prototype 5+dev2
+Prototype 5+dev3
 ----------------
 
+- Increased recoil of Blaster and Battle Rifle.
 - Server crash fix (currently ony in linux version)
-- Bugfixes
+- Bugfixes & other minor improvements
 
 
 Prototype 5-testing
